# magsync

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  UPDATE_KEYS.md  docker-compose.example.yml  docker-compose.yml  pyproject.toml
.claude/projects/-Users-anthonyizzo-Development-magsync/memory/: MEMORY.md  reference_github_repo.md
.github/workflows/: docker.yml
src/magsync/: __init__.py  __main__.py  cli.py  config.py  output.py
src/magsync/core/: batch.py  diagnostics.py  downloader.py  email_template.py  index.py  matching.py  models.py  notify.py  organizer.py  policy.py  scraper.py  urls.py
src/magsync/tui/: app.py
tests/: test_backfill_cli.py  test_batch.py  test_batch_hardening.py  test_cli_external_failures.py  test_config.py  test_daemon.py  test_downloader.py  test_external_failure_cycle.py  test_failure_foundation.py  test_index.py  test_intent_cli.py  test_intent_scoping.py  test_matching.py  test_output.py  test_retry_scope.py  test_scraper.py  test_tui.py  test_urls.py
tests/fixtures/: limewire_share_live.html  limewire_share_orphaned.html  limewire_share_removed.html
