[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magsync"
version = "0.7.0"
description = "CLI/TUI tool for indexing and downloading magazines from freemagazines.top"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "cryptography>=42.0",
    "textual>=0.80",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
notifications = ["apprise>=1.7"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
magsync = "magsync.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/magsync"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
